# drf_authentication

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/drf_authentication/: __init__.py  cli.py
tests/: __init__.py  test_drf_authentication.py
