[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf_authentication"
version = "0.1.0"
description = "Django package for custom user authentication'"
readme = "README.rst"
authors = [
  {name = "Showkat Ali", email = "this.showkat@gmail.com"}
]
maintainers = [
  {name = "Showkat Ali", email = "this.showkat@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/this-showkat/drf_authentication/issues"
changelog = "https://github.com/this-showkat/drf_authentication/blob/master/changelog.md"
homepage = "https://github.com/this-showkat/drf_authentication"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

